# mediarescue

./: .gitignore  CLAUDE.md
.claude/agents/: rust-api-engineer.md  rust-core-engineer.md  rust-qa-engineer.md  tla-spec-writer.md
.github/workflows/: ci-frontend.yml  ci-rust.yml  tla-check.yml
engine/: Cargo.toml
engine/mediarescue-api/: Cargo.toml
engine/mediarescue-api/src/: config.rs  main.rs  state.rs
engine/mediarescue-api/src/dto/: request.rs  response.rs
engine/mediarescue-api/src/middleware/: mod.rs
engine/mediarescue-api/src/routes/: devices.rs  files.rs  health.rs  mod.rs  recovery.rs  scans.rs  settings.rs
engine/mediarescue-api/src/ws/: events.rs  handler.rs  mod.rs
engine/mediarescue-cli/: Cargo.toml
engine/mediarescue-cli/src/: main.rs
engine/mediarescue-core/: Cargo.toml
engine/mediarescue-core/src/: error.rs  lib.rs  types.rs
engine/mediarescue-core/src/carver/: engine.rs  fragment.rs  mod.rs  strategy.rs
engine/mediarescue-core/src/device/: enumerator.rs  image.rs  mod.rs  reader.rs
engine/mediarescue-core/src/formats/: avi.rs  jpeg.rs  mkv.rs  mod.rs  mp4.rs  png.rs  raw.rs  traits.rs
engine/mediarescue-core/src/pipeline/: mod.rs  orchestrator.rs  progress.rs  session.rs
engine/mediarescue-core/src/reconstruct/: mod.rs  repairer.rs  thumbnail.rs  validator.rs
engine/mediarescue-core/src/scanner/: mod.rs  sector_map.rs  signatures.rs  surface.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  app.css  main.tsx  router.tsx
frontend/src/api/: client.ts  endpoints.ts  websocket.ts
frontend/src/components/common/: ByteSize.tsx  ErrorBoundary.tsx  ProgressBar.tsx  StatusBadge.tsx
frontend/src/components/dashboard/: DeviceCard.tsx  DeviceSelector.tsx  QuickStats.tsx
frontend/src/components/layout/: AppShell.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/recovery/: ExportDialog.tsx  RepairOptions.tsx  RepairProgress.tsx
frontend/src/components/results/: FileCard.tsx  FileGallery.tsx  FilePreview.tsx  (+1 more)
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: DashboardPage.tsx  RecoveryPage.tsx  ResultsPage.tsx  ScannerPage.tsx  SettingsPage.tsx
frontend/src/stores/: deviceStore.ts  scanStore.ts  settingsStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: format.ts
specs/: ConcurrentRecovery.cfg  ConcurrentRecovery.tla  DiskIOManager.cfg  DiskIOManager.tla  FileReconstruction.cfg  FileReconstruction.tla  RecoveryPipeline.cfg  RecoveryPipeline.tla  ScannerStateMachine.cfg  ScannerStateMachine.tla
test-data/: generate_fixtures.py
(+8 files in other folders)
