[package]
name = "mediarescue-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "REST API and WebSocket server for MediaRescue"

[[bin]]
name = "mediarescue-api"
path = "src/main.rs"

[dependencies]
mediarescue-core = { path = "../mediarescue-core" }
axum = { version = "0.7", features = ["ws"] }
tokio.workspace = true
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
